ping-pong/manifests/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2222 # arbitrary cluster port
      protocol: TCP
      targetPort: 5000 # exposed port that flask runs on
