ping-pong/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ping-pong-ing
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: main-application-svc
              servicePort: 2222 # matches arbitrary cluster port in ../main-app/clusterip.yaml
          - path: /pingpong
            backend:
              serviceName: ping-pong-svc
              servicePort: 2222 # matches arbitrary cluster port in clusterip.yaml
